# screen-stitch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  batch.sh  pyproject.toml
src/screen_stitch/: __init__.py  cvutils.py  layout_detection.py  stitch.py
