[project]
name = "screen-stitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangxia Huang", email = "huang.sangxia@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.1",
    "opencv-contrib-python>=4.13.0.90",
    "pre-commit>=4.5.1",
]

[project.scripts]
screen-stitch = "screen_stitch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
